ci(infra): add SSH access setup for GitHub Actions GCS integration tests
Configures EC2 security group and SSH key pair for CI to access GCS
test instance. Key changes:

- Add security group rule allowing SSH (0.0.0.0/0, key-auth required)
- Generate ed25519 SSH key pair for GitHub Actions
- Save private key locally for adding to GitHub secrets
- Add ansible.cfg for SSH connection settings
- Update CI workflow to setup SSH from GCS_SSH_PRIVATE_KEY secret
- Add ansible.posix collection for authorized_key module

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,16 @@ jobs:
         run: |
           ansible-galaxy collection install m1yag1-globus-*.tar.gz --force
 
+      - name: Setup SSH for GCS instance
+        env:
+          GCS_SSH_PRIVATE_KEY: ${{ secrets.GCS_SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$GCS_SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          # Add GCS instance to known_hosts (IP discovered dynamically by tests)
+          # Using StrictHostKeyChecking=accept-new in ansible.cfg instead
+
       - name: Run integration tests with tox
         env:
           S3_TOKEN_BUCKET: ${{ secrets.S3_TOKEN_BUCKET }}
