--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,7 @@ deps =
     ansible-core>=2.16.0
     ansible-lint>=6.0.0
 commands =
+    ansible-galaxy collection install amazon.aws ansible.posix --force
     ansible-lint {posargs:docs/examples/}
 
 [testenv:format]
