--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,18 @@ jobs:
         run: |
           ansible-galaxy collection install m1yag1-globus-*.tar.gz --force
 
+      - name: Refresh OAuth tokens
+        env:
+          S3_TOKEN_BUCKET: ${{ secrets.S3_TOKEN_BUCKET }}
+          S3_TOKEN_KEY: ${{ secrets.S3_TOKEN_KEY }}
+          S3_TOKEN_NAMESPACE: ${{ secrets.S3_TOKEN_NAMESPACE || 'github-actions' }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          GLOBUS_CLIENT_ID: ${{ secrets.GLOBUS_CLIENT_ID }}
+          GLOBUS_SDK_ENVIRONMENT: test
+        run: |
+          uv pip install --system globus-sdk boto3
+          python scripts/refresh_ci_tokens.py || echo "::warning::Token refresh failed - some tests may be skipped"
+
       - name: Setup SSH for GCS instance
         env:
           GCS_SSH_PRIVATE_KEY: ${{ secrets.GCS_SSH_PRIVATE_KEY }}
