fix(tests): add auth method to resource names for parallel test isolation
When multiple CI jobs (sdk3-oauth, sdk3-creds, sdk4-oauth, sdk4-creds)
run in parallel against the same GCS instance, they collide on resource
names. Now resource names include both SDK version and auth method
(e.g., -sdk4-oauth, -sdk4-creds) to prevent conflicts.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,6 +182,8 @@ jobs:
           GLOBUS_SDK_ENVIRONMENT: test
           TEST_GCS_PROJECT_ID: ${{ secrets.GLOBUS_PROJECT_ID }}
           TEST_GCS_SUBSCRIPTION_ID: ${{ secrets.GLOBUS_SUBSCRIPTION_ID }}
+          # Auth method for unique resource names in parallel tests
+          TEST_AUTH_METHOD: ${{ matrix.auth-method }}
         run: |
           tox -e py312-sdk${{ matrix.sdk-version }} -- tests/integration/ -rs --tb=short -m "not high_assurance and not compute"
 
