--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,7 @@ passenv =
     TEST_GCS_SSH_USER
     TEST_GCS_PROJECT_ID
     TEST_GCS_SUBSCRIPTION_ID
+    TEST_AUTH_METHOD
 commands =
     python -c "import globus_sdk; print(f'Testing with Globus SDK {globus_sdk.__version__}')"
     pytest -v {posargs}
