--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
     pytest-cov>=4.0.0
     pytest-xdist>=3.0.0
     pytest-mock>=3.10.0
+    pytest-rerunfailures>=12.0
     ansible-core>=2.16.0
     packaging>=21.0
     sdk3: globus-sdk>=3.0.0,<4.0.0
@@ -34,6 +35,7 @@ deps =
     pytest-cov>=4.0.0
     pytest-xdist>=3.0.0
     pytest-mock>=3.10.0
+    pytest-rerunfailures>=12.0
     ansible-core>=2.16.0
     packaging>=21.0
     requests>=2.31.0
