fix(tox): correct collection namespace in galaxy environments
Update galaxy-publish and galaxy-test tox environments to use
m1yag1-globus instead of the old community-globus namespace.

--- a/tox.ini
+++ b/tox.ini
@@ -277,7 +277,7 @@ commands_pre =
     mkdir -p _build
 commands =
     ansible-galaxy collection build --force --output-path _build
-    bash -c 'ansible-galaxy collection publish _build/community-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}'
+    bash -c 'ansible-galaxy collection publish _build/m1yag1-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}'
 
 [testenv:galaxy-test]
 description = Test collection build and installation locally
@@ -293,6 +293,6 @@ commands_pre =
     mkdir -p _build
 commands =
     ansible-galaxy collection build --force --output-path _build
-    bash -c 'ansible-galaxy collection install _build/community-globus-*.tar.gz --force'
-    ansible-galaxy collection list community.globus
+    bash -c 'ansible-galaxy collection install _build/m1yag1-globus-*.tar.gz --force'
+    ansible-galaxy collection list m1yag1.globus
     python -c "print('\n=== Test installation successful ===')"
