docs: add Sphinx documentation with ReadTheDocs support
- Add antsibull-docs for generating module documentation from docstrings
- Configure Sphinx with sphinx_rtd_theme
- Add .readthedocs.yaml for automated builds
- Add tox docs and docs-serve environments
- Update all modules: set author to m1yag1, use FQCN for doc fragments
- Remove auth_method from examples (inferred from credentials)
- Fix globus_auth module missing doc fragment reference
- Update project URLs in pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -107,11 +107,41 @@ commands =
     mypy plugins/module_utils/
 
 [testenv:docs]
+description = Build Sphinx documentation
+skip_install = true
 deps =
-    sphinx>=6.0.0
-    sphinx-rtd-theme>=1.2.0
+    .[docs]
+allowlist_externals =
+    rm
+    mkdir
+    bash
+    echo
+commands_pre =
+    # Build and install collection so antsibull can find it
+    ansible-galaxy collection build --force
+    bash -c 'ansible-galaxy collection install m1yag1-globus-*.tar.gz --force'
 commands =
-    python -c "import markdown; markdown.markdown(open('README.md').read())"
+    # Build docs
+    bash -c 'cd docs && rm -rf _build rst && ./build.sh'
+    echo "=== Docs built at docs/_build/html/ ==="
+    echo "View with: open docs/_build/html/index.html"
+
+[testenv:docs-serve]
+description = Build and serve docs locally
+skip_install = true
+deps =
+    .[docs]
+allowlist_externals =
+    rm
+    mkdir
+    bash
+    echo
+commands_pre =
+    {[testenv:docs]commands_pre}
+commands =
+    bash -c 'cd docs && rm -rf _build rst && ./build.sh'
+    echo "=== Starting local server at http://localhost:8000 ==="
+    python -m http.server 8000 --directory docs/_build/html
 
 [testenv:e2e]
 deps =
