--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,11 +63,18 @@ security = [
     "safety>=2.3.0",
 ]
 
+docs = [
+    "antsibull-docs>=2.0.0",
+    "ansible-pygments",
+    "sphinx",
+    "sphinx-rtd-theme",
+]
+
 [project.urls]
-Homepage = "https://github.com/your-org/ansible-globus"
-Repository = "https://github.com/your-org/ansible-globus"
-Documentation = "https://github.com/your-org/ansible-globus/blob/main/README.md"
-"Bug Tracker" = "https://github.com/your-org/ansible-globus/issues"
+Homepage = "https://github.com/m1yag1/ansible-globus"
+Repository = "https://github.com/m1yag1/ansible-globus"
+Documentation = "https://ansible-globus.readthedocs.io"
+"Bug Tracker" = "https://github.com/m1yag1/ansible-globus/issues"
 
 [tool.ruff]
 line-length = 88
