docs: restructure documentation with getting started guide
- Simplify README.md: remove badges, link to RTD for full docs
- Add getting-started section with concepts, first playbook tutorial
- Add user-guide section with authentication documentation
- Clarify distinction between API modules (localhost) and globus_gcs (runs on server)
- Update build.sh and .readthedocs.yaml to copy new doc directories

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,8 +19,9 @@ build:
       # Fix title case
       - find docs/rst -name '*.rst' -exec sed -i 's/M1Yag1\.Globus/m1yag1.globus/g' {} \;
       - find docs/rst -name '*.rst' -exec sed -i 's/M1yag1/m1yag1/g' {} \;
-      # Copy Sphinx config files
+      # Copy Sphinx config files and user-written docs
       - cp docs/conf.py docs/index.rst docs/rst/
+      - cp -r docs/getting-started docs/rst/
 
 sphinx:
   configuration: docs/rst/conf.py
