fix(tox): add {posargs} to release command for non-interactive mode

--- a/tox.ini
+++ b/tox.ini
@@ -272,7 +272,7 @@ allowlist_externals =
     git
     tox
 commands =
-    python scripts/release.py
+    python scripts/release.py {posargs}
 
 # Ansible Galaxy publishing environments
 [testenv:galaxy-build]
